unpackaged/main/default/objects/cmbls__Loan_Transfer__c/cmbls__Loan_Transfer__c.object-meta.xml
<CustomObject>
    <label>Loan Transfer</label>
    <nameField>
        <label>Loan Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans Transfer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>