unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Accrued_INT_Bal_Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>Accrued_INT_Bal_Not_Paid__c</fullName>
    <formula>AND(
        cmbls__Previous_Fund__r.Name = "National Funding",
        OR(cmbls__New_Fund__r.Name  = "NFAS2",
        cmbls__New_Fund__r.Name  = "NFAS3")
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued INT Bal Not Paid</label>
    <type>Checkbox</type>
</CustomField>