unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Broker_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Balance__c</fullName>
    <label>Broker Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>