unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Disbursement_ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Disbursement_ACH_Processor__c</fullName>
    <inlineHelpText>ACH Processor which will be used in the created Disbursement. If Empty it will be populated with the Default Credit ACH Processor from Fund Record</inlineHelpText>
    <label>Disbursement ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo - NF Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NFAS2 Collections</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - NF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - QBF Funding</fullName>
            </value>
            <value>
                <fullName>NF Transfer (QB)</fullName>
            </value>
            <value>
                <fullName>NFAS2 Transfer</fullName>
            </value>
            <value>
                <fullName>NFSPV1 Transfer</fullName>
            </value>
            <value>
                <fullName>NFSPV2 Transfer</fullName>
            </value>
            <value>
                <fullName>NFAS3 Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>