unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Loan_Transfer_Summary__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Loan_Transfer_Summary__c</fullName>
    <label>Loan Transfer Summary</label>
    <referenceTo>cmbls__Loan_Transfer_Summary__c</referenceTo>
    <relationshipLabel>Loan Transfers</relationshipLabel>
    <relationshipName>Loan_Transfers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>