unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__New_Fund__c.field-meta.xml
<CustomField>
    <fullName>cmbls__New_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Fund</label>
    <referenceTo>cmbls__Fund__c</referenceTo>
    <relationshipLabel>Loan Transfers</relationshipLabel>
    <relationshipName>Loan_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>