unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Previous_Fund__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Previous_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Fund</label>
    <referenceTo>cmbls__Fund__c</referenceTo>
    <relationshipLabel>Loans Transfer (Previous Fund)</relationshipLabel>
    <relationshipName>Loans_Transfer1</relationshipName>
    <type>Lookup</type>
</CustomField>