unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Principal__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Principal__c</fullName>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>