unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Repayment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Repayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>Loan Transfers</relationshipLabel>
    <relationshipName>Loan_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>