unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/cmbls__Unpaid_Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Unpaid_Accrued_Interest__c</fullName>
    <inlineHelpText>Difference between Interest Accrued and Interest Paid</inlineHelpText>
    <label>Unpaid Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>