unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Indirect_Cost_RevShare__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Cost_RevShare__c</fullName>
    <label>Indirect Cost RevShare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>