unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Interest_Balance__c.field-meta.xml
<CustomField>
    <fullName>Interest_Balance__c</fullName>
    <label>Interest Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>