unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/New_Entity_Initial_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Entity_Initial_Direct_Cost__c</fullName>
    <label>New Entity Initial Direct Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>