unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/New_Entity_Intercompany_Transfer__c.field-meta.xml
<CustomField>
    <fullName>New_Entity_Intercompany_Transfer__c</fullName>
    <label>New Entity Intercompany Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>