unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/New_Entity_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>New_Entity_Origination_Fee__c</fullName>
    <label>New Entity Origination Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>