unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/New_Entity_Receivable__c.field-meta.xml
<CustomField>
    <fullName>New_Entity_Receivable__c</fullName>
    <label>New Entity Receivable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>