unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Prev_Entity_INT_Income__c.field-meta.xml
<CustomField>
    <fullName>Prev_Entity_INT_Income__c</fullName>
    <label>Prev Entity INT Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>