unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Prev_Entity_Intercompany_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Prev_Entity_Intercompany_Transfer__c</fullName>
    <label>Prev Entity Intercompany Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>