unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Previous_Entity_Initial_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Previous_Entity_Initial_Direct_Cost__c</fullName>
    <label>Previous Entity Initial Direct Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>