unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Previous_Entity_INT_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Previous_Entity_INT_Receivable__c</fullName>
    <label>Previous Entity INT Receivable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>