unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Previous_Entity_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Previous_Entity_Origination_Fee__c</fullName>
    <label>Previous Entity Origination Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>