unpackaged/main/default/objects/cmbls__Loan_Transfer__c/fields/Unpaid_Accrued_Interest_ABS__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Accrued_Interest_ABS__c</fullName>
    <formula>ABS(cmbls__Unpaid_Accrued_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Accrued Interest (ABS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>